Rahti2/Mosquitto/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
  labels:
    app: mosquitto 
spec:
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      port: 8883
      targetPort: 8883
